Starting to add identifiers for objectives.

--- a/blog/March 26, 2020.md
+++ b/blog/March 26, 2020.md
@@ -4,6 +4,13 @@ Goals for today:
 * [X] Look into the showerthought idea of putting a colour line in the
       curriculum document to visualize how the course units flow through course
       outcomes. I don't think this is realistically doable with 
-* [ ] Manually tag all course objectives so that you can make references across
+* [.] Manually tag all course objectives so that you can make references across
       documents.
-    * [ ] Figure out what the best tagging approach is (pure LaTeX?)
+    * [X] Figure out what the best tagging approach is (pure LaTeX?)
+        * Pure LaTeX doesn't really do what I want. I can use Pandoc's native
+          `span` to give a block of text an ID (e.g., `[outcome]{#id}`), and I
+          might wind up doing that anyway, but for now I'm going with a custom
+          approach of putting a label in the tag (e.g., `:tag#label`).
+    * [ ] Label COMP1010
+    * [ ] Label COMP1020
+    * [ ] Label COMP1500
