--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -46,7 +46,8 @@ Programming Basics
 By the end of this unit, students should be able to:
 
 1. Use an integrated development environment (IDE) to write and run a simple,
-  linear program using a procedural programming language. :program:
+   linear program using a procedural programming language.
+   :program#write-and-run: 
     1. Use *literal values* in a program.
     2. Describe what code does using *comments*.
   
@@ -69,58 +70,72 @@ language.
 
 By the end of this unit, students should be able to:
 
-1. Draw points, lines, and shapes on the Processing canvas. :program:
+1. Draw points, lines, and shapes on the Processing canvas.
+   :program#processing-shapes:
 2. Change properties of shapes and the canvas, like background colour, outline
-   colour, fill colour, size, position, and line weight. :program:
+   colour, fill colour, size, position, and line weight.
+   :program#processing-shape-properties:
 
 Variables and Integers
 ----------------------
 
 By the end of this unit, students should be able to:
 
-1. Declare and use a variable in a program to represent information. :represent: :program:
-2. Initialize a variable using a literal value. :program:
-3. Evaluate arithmetic expressions (&plus;, &minus;, &times;, &divide;, mod)
-   that include both literal values and variables. :program: :evaluate:
-4. Explain the purpose of the modulus operator. :communicate:
+1. Declare and use a variable in a program to represent information.
+   :represent#symbols-for-values: :program#declare-use-variables:
+    1. Initialize a variable using a literal value.
+2. Write and evaluate arithmetic expressions (&plus;, &minus;, &times;,
+   &divide;, mod) that include both literal values and variables.
+   :program#write-arithmetic-expressions:
+   :evaluate#evaluate-arithmetic-expressions:
+3. Explain the purpose of the modulus operator. :communicate#explain-modulus:
     1. List uses of the modulus operator.
-5. Debug simple errors by inspecting the value of a variable as the program is
-   running. :program:
-6. Identify compile-time errors in a fragment of code (e.g., incorrect case on
-   function names, duplicated variable names, non-existent variables). :evaluate:
+4. Debug simple errors by inspecting the value of a variable as the program is
+   running. :program#basic-print-debugging:
+5. Identify compile-time errors in a fragment of code (e.g., incorrect case on
+   function names, duplicated variable names, non-existent variables).
+   :evaluate#find-compile-errors:
    
 Coding Style and Standards
 --------------------------
 
 By the end of this unit, students should be able to:
 
-1. Choose meaningful variable names that make code more readable. :program:
-   :communicate:
-2. Declare and use *named constants* in a program. :program:
-3. Identify values that should be represented as a named constant. :represent: :program:
-4. Explain how named constants can be used as a safety feature. :communicate:
-5. Compare and contrast named constants and regular variables. :communicate:
+1. Choose meaningful variable names that make code more readable.
+   :program#use-meaningful-names: :communicate#choose-meaningful-names:
+2. Declare and use *named constants* in a program. :program#use-named-constants:
+3. Identify values that should be represented as a named constant.
+   :represent#identify-constant-values:
+4. Explain how named constants can be used as a safety feature.
+   :communicate#named-constants-safety:
+5. Compare and contrast named constants and regular variables.
+   :communicate#compare-constants-and-variables:
 
 Active Programs
 ---------------
 
 By the end of this unit, students should be able to:
 
-1. Use a "global variable" in a program to maintain state. :represent: :program:
-2. Write a program that accepts and reacts to input from a user. :program:
+1. Use a "global variable" in a program to maintain state.
+   :represent#state-of-application: :program#use-global-variable:
+2. Write a program that accepts and reacts to input from a user.
+   :program#accept-use-input:
 
 ### Active Programs: Processing
 
 By the end of this unit, students should be able to:
 
 1. Use the global variables exposed in the Processing environment as input to a
-   program, like mouse position ([`mouseX`] and [`mouseY`]). :program:
-2. Write a program that changes the canvas as time passes. :program:
-3. List the special function names that are used in Processing. :communicate:
+   program, like mouse position ([`mouseX`] and [`mouseY`]).
+   :program#processing-cursor-position:
+2. Write a program that changes the canvas as time passes.
+   :program#processing-time:
+3. List the special function names that are used in Processing.
+   :communicate#processing-list-special-functions:
 4. Order the function names by when they are executed when a Processing program
-   is started. :communicate:
+   is started. :communicate#processing-order-special-functions:
 5. Explain the purpose of each of the special function names used in Processing.
-   :communicate:
+   :communicate#processing-communicate-purpose-of-special-functions:
    
 [`mouseX`]: https://processing.org/reference/mouseX.html
 [`mouseY`]: https://processing.org/reference/mouseY.html
@@ -131,39 +146,47 @@ User-defined Functions, part 1
 By the end of this unit, students should be able to:
 
 1. Create and use user-defined functions that accept no inputs and do not
-   `return` any data, in a program. :program:
+   `return` any data, in a program. :program#write-simple-functions:
     1. Choose a concise and meaningful name for a user-defined function.
 2. Identify a syntactically correct function signature from a list of
-   function signatures. :evaluate:
+   function signatures. :evaluate#identify-function-signature:
 3. Trace the execution of code when user-defined functions are called.
-   :evaluate:
-4. Define the term "local variable". :communicate:
-5. Determine the visibility of a variable declared in a program. :evaluate:
+   :evaluate#trace-execution-with-functions:
+4. Define the term "local variable". :communicate#define-term-local:
+5. Determine the visibility of a variable declared in a program.
+   :evaluate#determine-scope-of-variable:
 6. Define the term "scope" in terms of variable visibility when declared within
-   a function. :communicate:
-7. Compare and contrast local and global variables. :communicate:
+   a function. :communicate#define-term-scope:
+7. Compare and contrast local and global variables.
+   :communicate#compare-local-global-scope:
 
 Real Numbers - `float`s
 -----------------------
 
 By the end of this unit, students should be able to:
 
-1. Declare and use floating-point-type variables in a program. :represent: :program:
-2. Evaluate an expression containing floating point numbers. :evaluate:
-3. Determine the type of the result of evaluating an expression. :evaluate:
-4. Use compound assignment/arithmetic operators (e.g., `+=`, `++`). :program:
-5. Explain the difference between integers and real numbers. :communicate:
+1. Declare and use floating-point-type variables in a program.
+   :represent#symbols-for-float: :program#use-floating-point:
+2. Evaluate an expression containing floating point numbers.
+   :evaluate#evaluate-float-expression:
+3. Determine the type of the result of evaluating an expression.
+   :evaluate#determine-expression-type:
+4. Use compound assignment/arithmetic operators (e.g., `+=`, `++`).
+   :program#use-compound-operator:
+5. Explain the difference between integers and real numbers.
+   :communicate#explain-difference-number-types:
 6. Explain how and why floating point numbers are limited when being represented
-   in binary by a computer. :represent: :communicate:
+   in binary by a computer. :represent#binary-for-numbers:
+   :communicate#limitations-of-binary-representation:
 7. Use language libraries for evaluating trigonometric or other math functions.
-   :program:
+   :program#call-math-library-functions:
 
 ### Real Numbers - `float`s: Processing
 
 By the end of this unit, students should be able to:
 
 1. Use the canvas size to change the behaviour of a program ([`width`],
-   [`height`]). :program:
+   [`height`]). :program#processing-canvas-size:
    
 [`width`]: https://processing.org/reference/width.html
 [`height`]: https://processing.org/reference/height.html
