All 1010 learning objectives have ids.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -196,15 +196,19 @@ Text and Strings
 
 By the end of this unit, students should be able to:
 
-1. Create and use `String`-type variables in a program. :represent: :program:
+1. Create and use `String`-type variables in a program.
+   :represent#represent-text: :program#create-use-strings:
     1. Combine multiple `String`s together using the concatenation operator.
     2. Call an instance method on a `String` to get its length.
     3. Access individual characters in a `String`, by *index*.
-2. Convert between number types and `String` types. :program:
+2. Convert between number types and `String` types.
+   :represent#differences-numbers-characters: :program#convert-numbers-strings:
 3. Explain why number types cannot be assigned to `String` types, and
-   vice-versa. :communicate:
-4. Create and use a `char`-type variable in a program. :represent: :program:
-5. Evaluate expressions that operate on `String`s. :evaluate:
+   vice-versa. :communicate#:
+4. Create and use a `char`-type variable in a program.
+   :represent#represent-single-character: :program#create-user-char:
+5. Evaluate expressions that operate on `String`s.
+   :evaluate#evaluate-string-expressions:
     1. Calling instance methods.
     2. Concatenation operator.
     3. Order of operations (e.g., `"hello" + (10 + 2)`).
@@ -213,7 +217,7 @@ By the end of this unit, students should be able to:
 
 By the end of this unit, students should be able to:
 
-1. Draw text on the canvas. :program:
+1. Draw text on the canvas. :program#processing-draw-text:
 
 Data Types and Memory
 ---------------------
@@ -221,32 +225,40 @@ Data Types and Memory
 By the end of this unit, students should be able to:
 
 1. Choose a specific number type to represent a value, minimizing required
-   memory (e.g., `double` vs `float` vs `long` vs `int` vs `short`). :program:
-   :evaluate: :represent:
-2. Convert between number types using explicit and implicit casts. :program:
-3. Evaluate an expression containing implicit and explicit casts. :evaluate:
+   memory (e.g., `double` vs `float` vs `long` vs `int` vs `short`).
+   :program#use-different-number-types:
+   :represent#choose-appropriate-size-numbers:
+2. Convert between number types using explicit and implicit casts.
+   :program#casting-between-number-types:
+3. Evaluate an expression containing implicit and explicit casts.
+   :evaluate#evaluate-casting-in-expression:
 4. Explain what happens to a numeric value when explicit down-casting is
-   applied. :communicate:
-5. Define the term "Integer overflow". :communicate:
+   applied. :communicate#explain-effects-of-casting:
+5. Define the term "Integer overflow". :communicate#define-integer-overflow:
 
 True and False - Booleans
 -------------------------
 
 By the end of this unit, students should be able to:
 
-1. Declare and use `boolean` variables in a program. :program: :represent:
+1. Declare and use `boolean` variables in a program.
+   :program#create-and-use-boolean-variables:
+   :represent#represent-true-and-false:
 2. Evaluate `boolean` expressions with logical operators (e.g., `and`, `or`,
-   `not`). :evaluate:
-3. Use conditional statements (`if` and `else`) in a program. :program:
+   `not`). :evaluate#evaluate-boolean-expressions-logical-operators:
+3. Use conditional statements (`if` and `else`) in a program.
+   :program#use-conditional-statements:
     1. Use *nested* conditional statements in a program.
-5. Decide if a variable is visible (scope) in a nested block. :evaluate:
+5. Decide if a variable is visible (scope) in a nested block.
+   :evaluate#evaluate-scope-in-nested-blocks:
 
 ### True and False - Booleans: Processing
 
 By the end of this unit, students should be able to:
 
 1. Use keyboard and mouse state (keys pressed or not) to affect the behaviour of
-   a program ([`mousePressed`], [`keyPressed`]). :program:
+   a program ([`mousePressed`], [`keyPressed`]).
+   :program#processing-use-mouse-click-state:
    
 [`mousePressed`]: https://processing.org/reference/mousePressed.html
 [`keyPressed`]: https://processing.org/reference/keyPressed.html
@@ -257,27 +269,29 @@ Advanced Conditionals
 By the end of this unit, students should be able to:
 
 1. Use relational operators to compare number types in a program (e.g., `>`,
-   `<`, `>=`, `<=`, `==`, etc). :program:
+   `<`, `>=`, `<=`, `==`, etc). :program#use-relational-operators:
 2. Evaluate Boolean expressions containing both logical and relational
-   operators. :evaluate: 
+   operators. :evaluate#evaluate-complex-boolean-expression: 
 3. Call an instance method on a `String` to *compare* it to another instance of
-   `String`. :program:
+   `String`. :program#string-comparison:
 4. Write *concise* logical expressions (i.e., write `if(x)`, **not**
-   `if(x==true)`). :program:
+   `if(x==true)`). :program#no-extraneous-boolean-comparison:
 5. Explain why floating-point numbers cannot be directly compared for equality.
-   :communicate:
-6. Use and evaluate "short-circuit" logical expressions in a program. :program:
-   :evaluate:
-7. Use nested `else if` blocks in a program. :program:
+   :communicate#explain-float-equality:
+6. Use and evaluate "short-circuit" logical expressions in a program.
+   :program#use-short-circuit-boolean-expressions:
+   :evaluate#evaluate-short-circuit-boolean-expressions:
+7. Use nested `else if` blocks in a program. :program#else-if-nested-blocks:
 8. Evaluate a code snippet containing complex conditional statements and logical
-   expressions. :evaluate:
+   expressions. :evaluate#evaluate-conditional-structures:
 
 Loops
 -----
 
 By the end of this unit, students should be able to:
 
-1. Write code that repeats execution with loop control structures. :program:
+1. Write code that repeats execution with loop control structures.
+   :program#use-basic-loops:
     1. Use a `for` loop to repeat an operation on a fixed number of items
        (exactly $n$ times).
     2. Use a `while` loop to repeat an operation while some condition is `true`
@@ -286,57 +300,65 @@ By the end of this unit, students should be able to:
        `true` (1 or more times).
     4. Choose the appropriate looping structure for a specific situation.
 2. Convert code that uses a `for` loop to a `while` loop, and vice-versa.
-   :program: :algorithms:
-3. Evaluate the execution of a loop control structure. :evaluate:
+   :program#convert-for-to-while:
+3. Evaluate the execution of a loop control structure.
+   :evaluate#evaluate-loop-execution:
     1. List the order of operations for both `for` and `while` loop control
        structures in Java/Processing.
 4. Discover the cause of crashing software by inspecting a stack trace.
-   :program:
+   :program#debug-with-stack-trace:
    
 Advanced Loops
 --------------
 
 By the end of this unit, students should be able to:
 
-1. Write code that uses a nested looping structure to solve a problem. :program:
+1. Write code that uses a nested looping structure to solve a problem.
+   :program#use-nested-loops:
     1. Identify when a nested loop should be used to solve a problem.
-2. Evaluate the execution of a nested looping structure. :evaluate:
+2. Evaluate the execution of a nested looping structure.
+   :evaluate#evaluate-nested-loop-execution:
     1. List the order of operations of a nested looping structure.
     2. List the state of variables in a nested looping structure.
 3. Write code that uses arbitrarily nested control structures (i.e., conditional
-   statements, loops) to solve a problem. :program:
+   statements, loops) to solve a problem.
+   :program#use-nested-mixed-control-structures:
 4. Manage the state of execution by using using a boolean variable to indicate
-   that an event has happened. :program:
+   that an event has happened. :program#use-flags-for-events:
    
 User Defined Functions Part 2
 -----------------------------
 
 By the end of this unit, students should be able to:
 
-1. Apply top-down programming to simplify and solve complex problems. :algorithms:
+1. Apply top-down programming to simplify and solve complex problems.
+   :algorithms#apply-top-down-design:
     1. Break a problem down into smaller, functional units.
     2. Decide how much logic belongs in a single function.
     3. Decide what inputs and outputs a function requires based on what it
        will do.
 2. Use stub functions to help write code for a previously broken-down problem.
-   :program:
+   :program#stubs-for-design:
 3. Create and use user-defined functions that accept one or more parameters
-   and/or `return` data to the caller in a program. :program:
+   and/or `return` data to the caller in a program.
+   :program#functions-with-params-return:
     1. Choose when to use globally-scoped variables and when to use
        locally-scoped variables/function parameters.
     2. Pass data to a function by reference, and pass data to a function by
        value.
     3. Use sentinel values to communicate an exceptional situation or error.
-4. Create and use an [accumulator] variable in a program. :program:
+4. Create and use an [accumulator] variable in a program.
+   :program#accumulate-data:
     1. Iteratively build a `String` by appending characters to the empty string.
     2. Take a running sum of a value by adding numbers to zero.
     3. Choose an appropriate initial value for an accumulator variable.
 5. List the state and scope of variables by tracing the execution of code when
-   user-defined functions are called. :evaluate:
+   user-defined functions are called.
+   :evaluate#evaluate-function-calls-variable-scope:
     1. Distinguish between multiple variables with the same name in different
        scopes.
 6. Define the term "side-effects", in relation to calling functions, passing
-   values by reference, and global variables. :communicate:
+   values by reference, and global variables. :communicate#define-side-effects:
 
 [accumulator]: https://en.wikipedia.org/wiki/Accumulator_(computing)
 
@@ -346,7 +368,8 @@ Compiling and the Java Virtual Machine
 By the end of this unit, students should be able to:
 
 1. Describe the workflow that a computer takes, going from high-level code, to a
-   computer program running on your computer. :communicate:
+   computer program running on your computer.
+   :communicate#describe-compile-workflow:
     1. Define the terms "compiler", "high-level language", "machine language",
        "virtual machine", "source code".
     2. Explain the purpose of a compiler.
@@ -357,12 +380,14 @@ Array Basics
 
 By the end of this unit, students should be able to:
 
-1. Create and use arrays in a program. :program: :represent:
+1. Create and use arrays in a program. :program#create-use-arrays:
+   :represent#represent-data-collections:
     1. Get the length of an array.
     2. Iterate over an array with a loop.
     3. Initialize an array with literals.
-2. List the limitations of an array. :communicate:
-3. Compare and contrast `String`s and arrays. :communicate:
+2. List the limitations of an array. :communicate#list-array-limitations:
+3. Compare and contrast `String`s and arrays.
+   :communicate#compare-strings-arrays:
 
 Arrays and Memory
 -----------------
@@ -370,11 +395,12 @@ Arrays and Memory
 By the end of this unit, students should be able to:
 
 1. Name the default value stored in an array, immediately after creation, based
-   on type. :communicate:
-2. Use and compare variables against `null`. :program:
-3. Copy the contents of one array to another. :program:
-4. Compare the contents of two arrays. :program:
-5. Compare and contrast arrays and primitive types. :communicate:
+   on type. :communicate#list-default-array-values-for-type:
+2. Use and compare variables against `null`. :program#compare-values-with-null:
+3. Copy the contents of one array to another. :program#copy-array-contents:
+4. Compare the contents of two arrays. :program#compare-array-contents:
+5. Compare and contrast arrays and primitive types.
+   :communicate#explain-differences-between-primitives-and-arrays:
     1. Explain why the assignment operator does not copy the contents of an
        array.
     2. Explain why the equality relational operator does not compare the
@@ -385,35 +411,48 @@ Arrays and Functions
 
 By the end of this unit, students should be able to:
 
-1. Use arrays as arguments and return values to and from functions. :program:
+1. Use arrays as arguments and return values to and from functions.
+   :program#functions-with-array-params-return:
     1. Modify data in an array passed as an argument.
 2. Explain why arrays as arguments behave differently from primitive variables.
-   :communicate:
+   :communicate#explain-function-array-relationship-scope-heap:
    
 Working with Arrays: Techniques
 -------------------------------
 
 By the end of this unit, students should be able to:
 
-1. Apply strategies for working with partially-filled arrays. :program:
-   :represent: :algorithms:
+1. Apply strategies for working with partially-filled arrays.
+   :program#use-partially-filled-arrays:
+   :represent#choose-sentinel-values: :algorithms#use-pointers-or-sentinels:
    1. Use a "pointer" value (an index) to represent the next free location.
    2. Choose and use an appropriate "sentinel" value to represent unused
       locations in the array (e.g., `null`, negative numbers, numbers outside
       the range of values being represented).
-2. Explain the limitations of partially-filled arrays. :communicate:
+2. Explain the limitations of partially-filled arrays.
+   :communicate#explain-partially-filled-array-limitations:
     1. List strategies for overcoming the limitations of partially filled
        arrays.
-3. Describe the linear search algorithm in plain English. :algorithms: :communicate:
+3. Describe the linear search algorithm in plain English.
+   :algorithms#linear-search: :communicate#explain-linear-search:
     1. Give an example of data where linear search might be used.
     2. Explain the limitations of linear search.
-4. Implement the linear search algorithm on an array. :algorithms: :program:
-5. Describe the binary search algorithm in plain English. :algorithms: :communicate:
+4. Implement the linear search algorithm on an array.
+   :program#implement-linear-search:
+5. Describe the binary search algorithm in plain English.
+   :algorithms#binary-search:
+   :communicate#explain-binary-search:
     1. Give an example of data where binary search might be used.
     2. Explain the limitations of binary search.
-6. Implement the binary search algorithm on an array. :algorithms: :program:
-7. Measure the complexity of linear search and binary search. :algorithms:
-8. Compare and contrast linear search and binary search. :algorithms: :communicate:
+6. Implement the binary search algorithm on an array.
+   :program#implement-binary-search:
+7. Measure the complexity of linear search and binary search.
+   :algorithms#measure-search-complexity:
+8. Compare and contrast linear search and binary search.
+   :algorithms#use-complexity-to-compare:
+   :communicate#data-requirements-for-algorithms:
+    1. State the requirements on data for binary search to be applied.
 9. Use "parallel" arrays to represent compound information for a single entity
-   (i.e., `name[0]` and `age[0]` represent the same person). :represent:
-   :program:
+   (i.e., `name[0]` and `age[0]` represent the same person).
+   :represent#representing-complex-data-with-parallel-arrays:
+   :program#create-and-use-parallel-arrays:
