--- a/blog/March 27, 2020.md
+++ b/blog/March 27, 2020.md
@@ -1,7 +1,7 @@
 Goals for today:
 
-* [.] Manually tag all course objectives so that you can make references across
+* [o] Manually tag all course objectives so that you can make references across
       documents.
     * [X] Label COMP1010
-    * [ ] Label COMP1020
+    * [X] Label COMP1020
     * [ ] Label COMP1500
