First cut of COMP 1500.

--- a/existing/COMP 1500.md
+++ b/existing/COMP 1500.md
@@ -17,9 +17,9 @@ Sources of information
 Tasks
 -----
 
-* [ ] Extract learning outcomes from own slides
-* [ ] Confirm learning outcomes from Jim's course
-* [ ] Contact Gord
+* [X] Extract learning outcomes from own slides
+* [ ] ~~Confirm learning outcomes from Jim's course~~
+* [ ] ~~Contact Gord~~
 
 Course objectives
 -----------------
