Script to automate rewriting learning objectives as native spans in pandoc.

--- a/blog/April 14, 2020.md
+++ b/blog/April 14, 2020.md
@@ -3,6 +3,8 @@ Goals for today:
 * [X] Decide how to proceed: How am I going to represent tags and IDs so I can
       actually use them in both HTML and PDF, and so I can make references to
       them across documents?
+* [X] Automate converting existing learning objectives with tags and IDs into
+      native spans with attributes.
       
 Yesterday I worked through a few different possible ideas:
 
@@ -49,3 +51,45 @@ Here's what I'm going to do going forward:
    COMP 1020, and COMP 1500 into a single document.
 3. Use the `\nameref` LaTeX command to build up the learning objectives for the
    new course(s).
+   
+---
+
+I don't need to do the tedious work of manually converting all of my learning
+objectives into this format, I should just use pandoc!
+
+I'm going to write a filter that finds `pf.ListItem` that contain strings that
+look like or contain `:[a-z#-]:` (the format that I've used for tags+IDs). Then
+I'm going to rewrite those `pf.ListItem` to be `pf.Span` with attributes.
+
+I've got a script `tags-to-attr.py` that will strip the formatted tags from
+instances of `pf.ListItem`. Now I need to *replace* the first instance of
+`pf.Plain` with `pf.Span` and add the tags as attributes.
+
+I'm getting stuck here with Panflute: I'm trying to straight-up replace an
+instance of `pf.Plain` in a `pf.ListContainer` with an instance of `pf.Span`,
+but I'm getting rejected because it says that the element is expecting an
+instance of a `pf.Block`.
+
+I think I need to step back and see what pandoc sees when I run a list item
+with a native span through it.
+
+It's not what I thought! What I expected was that I could just replace
+`pf.Plain` with `pf.Span`, but `* [thing]{attr=this}` is structured as:
+
+    ListItem(Plain(Span(..., attributes=)))
+
+The `pf.Plain` *contains* the `pf.Span`.
+
+OK. I've got it working(!) with some minor issues:
+
+1. There's trailing whitespace in the output, I think this is from when I
+   replace the content with the empty string.
+    * On further inspection, this is more likely to be word wrapping applied at
+      80 columns, the trailing `]{#...` is fairly long.
+2. The leading YAML metadata is missing from the top of the document.
+3. When I have multiple tags and IDs on a single learning objective, only the
+   last element is kept.
+4. The links are now inline. That's not a serious issue, but annoying, because I
+   prefer reference links.
+   
+Goal for tomorrow: Deal with the multiple ID issue.
