(mostly) complete solution to rewrite objectives.

--- a/reconsidered/COMP1010.md
+++ b/reconsidered/COMP1010.md
@@ -82,12 +82,12 @@ Variables and Integers
 By the end of this unit, students should be able to:
 
 1. Declare and use a variable in a program to represent information.
-   :represent#symbols-for-values: :program#declare-use-variables:
+   :represent: :program#declare-use-variables:
     1. Initialize a variable using a literal value.
 2. Write and evaluate arithmetic expressions (&plus;, &minus;, &times;,
    &divide;, mod) that include both literal values and variables.
-   :program#write-arithmetic-expressions:
-   :evaluate#evaluate-arithmetic-expressions:
+   :program#write-evaluate-arithmetic-expressions:
+   :evaluate:
 3. Explain the purpose of the modulus operator. :communicate#explain-modulus:
     1. List uses of the modulus operator.
 4. Debug simple errors by inspecting the value of a variable as the program is
@@ -102,7 +102,7 @@ Coding Style and Standards
 By the end of this unit, students should be able to:
 
 1. Choose meaningful variable names that make code more readable.
-   :program#use-meaningful-names: :communicate#choose-meaningful-names:
+   :communicate#choose-meaningful-names:
 2. Declare and use *named constants* in a program. :program#use-named-constants:
 3. Identify values that should be represented as a named constant.
    :represent#identify-constant-values:
@@ -117,7 +117,9 @@ Active Programs
 By the end of this unit, students should be able to:
 
 1. Use a "global variable" in a program to maintain state.
-   :represent#state-of-application: :program#use-global-variable:
+   :program#use-global-variable:
+   1. Represent application state in a variable.
+      :represent#state-of-application:
 2. Write a program that accepts and reacts to input from a user.
    :program#accept-use-input:
 
@@ -166,7 +168,7 @@ Real Numbers - `float`s
 By the end of this unit, students should be able to:
 
 1. Declare and use floating-point-type variables in a program.
-   :represent#symbols-for-float: :program#use-floating-point:
+   :program#use-floating-point:
 2. Evaluate an expression containing floating point numbers.
    :evaluate#evaluate-float-expression:
 3. Determine the type of the result of evaluating an expression.
@@ -176,7 +178,7 @@ By the end of this unit, students should be able to:
 5. Explain the difference between integers and real numbers.
    :communicate#explain-difference-number-types:
 6. Explain how and why floating point numbers are limited when being represented
-   in binary by a computer. :represent#binary-for-numbers:
+   in binary by a computer. 
    :communicate#limitations-of-binary-representation:
 7. Use language libraries for evaluating trigonometric or other math functions.
    :program#call-math-library-functions:
@@ -197,16 +199,16 @@ Text and Strings
 By the end of this unit, students should be able to:
 
 1. Create and use `String`-type variables in a program.
-   :represent#represent-text: :program#create-use-strings:
+   :program#create-use-strings:
     1. Combine multiple `String`s together using the concatenation operator.
     2. Call an instance method on a `String` to get its length.
     3. Access individual characters in a `String`, by *index*.
 2. Convert between number types and `String` types.
-   :represent#differences-numbers-characters: :program#convert-numbers-strings:
+   :program#convert-numbers-strings:
 3. Explain why number types cannot be assigned to `String` types, and
    vice-versa. :communicate#:
 4. Create and use a `char`-type variable in a program.
-   :represent#represent-single-character: :program#create-user-char:
+   :program#create-use-char:
 5. Evaluate expressions that operate on `String`s.
    :evaluate#evaluate-string-expressions:
     1. Calling instance methods.
@@ -224,10 +226,10 @@ Data Types and Memory
 
 By the end of this unit, students should be able to:
 
+1. Use different number types to represent numbers (e.g., `double`, `float`,
+   `long`, `int`, `short`). :program#use-different-number-types:
 1. Choose a specific number type to represent a value, minimizing required
-   memory (e.g., `double` vs `float` vs `long` vs `int` vs `short`).
-   :program#use-different-number-types:
-   :represent#choose-appropriate-size-numbers:
+   memory. :represent#choose-appropriate-size-numbers:
 2. Convert between number types using explicit and implicit casts.
    :program#casting-between-number-types:
 3. Evaluate an expression containing implicit and explicit casts.
@@ -243,7 +245,6 @@ By the end of this unit, students should be able to:
 
 1. Declare and use `boolean` variables in a program.
    :program#create-and-use-boolean-variables:
-   :represent#represent-true-and-false:
 2. Evaluate `boolean` expressions with logical operators (e.g., `and`, `or`,
    `not`). :evaluate#evaluate-boolean-expressions-logical-operators:
 3. Use conditional statements (`if` and `else`) in a program.
@@ -278,11 +279,12 @@ By the end of this unit, students should be able to:
    `if(x==true)`). :program#no-extraneous-boolean-comparison:
 5. Explain why floating-point numbers cannot be directly compared for equality.
    :communicate#explain-float-equality:
-6. Use and evaluate "short-circuit" logical expressions in a program.
+6. Use "short-circuit" logical expressions in a program.
    :program#use-short-circuit-boolean-expressions:
+7. Evaluate the result/side-effects of "short-circuit" logical expressions.
    :evaluate#evaluate-short-circuit-boolean-expressions:
-7. Use nested `else if` blocks in a program. :program#else-if-nested-blocks:
-8. Evaluate a code snippet containing complex conditional statements and logical
+8. Use nested `else if` blocks in a program. :program#else-if-nested-blocks:
+9. Evaluate a code snippet containing complex conditional statements and logical
    expressions. :evaluate#evaluate-conditional-structures:
 
 Loops
@@ -380,8 +382,9 @@ Array Basics
 
 By the end of this unit, students should be able to:
 
-1. Create and use arrays in a program. :program#create-use-arrays:
+1. Identify kinds of values that require "collection types".
    :represent#represent-data-collections:
+1. Create and use arrays in a program. :program#create-use-arrays:
     1. Get the length of an array.
     2. Iterate over an array with a loop.
     3. Initialize an array with literals.
@@ -424,35 +427,39 @@ By the end of this unit, students should be able to:
 
 1. Apply strategies for working with partially-filled arrays.
    :program#use-partially-filled-arrays:
-   :represent#choose-sentinel-values: :algorithms#use-pointers-or-sentinels:
    1. Use a "pointer" value (an index) to represent the next free location.
+      :algorithms#use-pointers-or-sentinels:
    2. Choose and use an appropriate "sentinel" value to represent unused
       locations in the array (e.g., `null`, negative numbers, numbers outside
-      the range of values being represented).
+      the range of values being represented). :represent#choose-sentinel-values: 
 2. Explain the limitations of partially-filled arrays.
    :communicate#explain-partially-filled-array-limitations:
     1. List strategies for overcoming the limitations of partially filled
        arrays.
 3. Describe the linear search algorithm in plain English.
-   :algorithms#linear-search: :communicate#explain-linear-search:
+   :algorithms#linear-search: 
     1. Give an example of data where linear search might be used.
+       :communicate#appropriate-data-for-linear-search:
     2. Explain the limitations of linear search.
+       :communicate#limitations-of-linear-search:
 4. Implement the linear search algorithm on an array.
    :program#implement-linear-search:
 5. Describe the binary search algorithm in plain English.
    :algorithms#binary-search:
-   :communicate#explain-binary-search:
     1. Give an example of data where binary search might be used.
+       :communicate#appropriate-data-for-binary-search:
     2. Explain the limitations of binary search.
+       :communicate#limitations-of-binary-search:
 6. Implement the binary search algorithm on an array.
    :program#implement-binary-search:
 7. Measure the complexity of linear search and binary search.
    :algorithms#measure-search-complexity:
 8. Compare and contrast linear search and binary search.
    :algorithms#use-complexity-to-compare:
-   :communicate#data-requirements-for-algorithms:
     1. State the requirements on data for binary search to be applied.
+       :communicate#data-requirements-for-algorithms:
 9. Use "parallel" arrays to represent compound information for a single entity
    (i.e., `name[0]` and `age[0]` represent the same person).
    :represent#representing-complex-data-with-parallel-arrays:
-   :program#create-and-use-parallel-arrays:
+    1. Write a program that uses parallel arrays.
+       :program#create-and-use-parallel-arrays:
