Updated with command to include YAML block

--- a/blog/April 15, 2020.md
+++ b/blog/April 15, 2020.md
@@ -52,3 +52,10 @@ YAML section. I might be able to deal with this using shell commands (e.g.,
 
 I'll write a small script that wraps both the `pandoc` command above with the
 `sed` script to rewrite the file in its entirety.
+
+The bash command that I can use for this is:
+
+    cat <(sed -n '/^---$/,/^---$/p' COMP1010.md) <(pandoc COMP1010.md \
+    d -f markdown-auto_identifiers --reference-links \
+    --reference-location=section -F tags-to-attr.py -t markdown) > \
+    COMP1010-attr.md
