Tasks for going forward, remove multiple IDs for 1500.

--- a/reconsidered/COMP1500.md
+++ b/reconsidered/COMP1500.md
@@ -50,9 +50,8 @@ By the end of this unit, students should be able to:
    mind-map. :represent#real-world-translation:
 7. Identify interfaces between objects in the real world.
    :represent#interfaces-between-objects: 
-8. Describe a problem in terms of inputs, outputs, and instructions to solve.
-   :represent#problems-as-information: :problem-solving#decomposing-problems:
-   :first-principles#problems-to-turing-machines:
+8. Describe a solution in terms of inputs, outputs, and instructions to solve.
+   :problem-solving#decomposing-problems: :represent:
    
 Representing information digitally
 ----------------------------------
